user valueOf to create scalar objects