@@ -39,7 +39,7 @@ public class IndexTemplate extends Template
 		out.print(html.url(QsResources.root.users));                    // line 15: <%html.url(QsResources.root.users)%>
 		out.println("\">Users</a><br>");                                // line 15: ">Users</a><br>
 		out.print("<a href=\"");                                        // line 16: <a href="
-		out.print(html.url(QsResources.root.users.$userId).setPathParam(new Integer(123))); // line 16: <%html.url(QsResources.root.users.$userId).setPathParam(new Integer(123))%>
+		out.print(html.url(QsResources.root.users.$userId).setPathParam(Integer.valueOf(123))); // line 16: <%html.url(QsResources.root.users.$userId).setPathParam(Integer.valueOf(123))%>
 		out.println("\">User 123</a><br>");                             // line 16: ">User 123</a><br>
 		out.println("</body>");                                         // line 17: </body>
 		out.decreaseTab();
