@@ -37,17 +37,17 @@ public class LangMixinTest extends CivTest
 		
 		// int
 		assertEquals("1,234", lang.format(1234));
-		assertEquals("2,345", lang.format(new Integer(2345), "a"));
+		assertEquals("2,345", lang.format(Integer.valueOf(2345), "a"));
 		assertEquals("a", lang.format((Integer)null, "a"));
 
 		// long
 		assertEquals("1,234", lang.format(1234L));
-		assertEquals("2,345", lang.format(new Long(2345), "a"));
+		assertEquals("2,345", lang.format(Long.valueOf(2345), "a"));
 		assertEquals("a", lang.format((Long)null, "a"));
 
 		// double
 		assertEquals("1,234.50", lang.format(1234.5));
-		assertEquals("2,345.60", lang.format(new Double(2345.6), "a"));
+		assertEquals("2,345.60", lang.format(Double.valueOf(2345.6), "a"));
 		assertEquals("a", lang.format((Double)null, "a"));
 	}
 	
